--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/jest": "27.4.1",
     "eslint": "8.11.0",
     "jest": "27.5.1",
-    "nodemon": "2.0.15"
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
     "@babel/core": "^7.25.9"
